fix scaling on mobile

--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,9 @@
 pre.prettyprint {
     border: none !important;
 }
+@media screen and (max-width: 1100px) {
+  #not-mobile {
+    visibility: hidden;
+    display: none;
+  }
+}
